new waybar config

--- a/home/green726/.dots/home/green726/.config/hypr/hyprland.conf
+++ b/home/green726/.dots/home/green726/.config/hypr/hyprland.conf
@@ -10,8 +10,8 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
-exec-once=eww daemon
-exec-once=eww open bar
+#exec-once=eww daemon
+#exec-once=eww open bar
 exec-once=nbfc start
 # exec-once=polkit-dumb-agent
 # exec-once=swaybg -i ~/Downloads/ship-bridge-bg.png
@@ -19,7 +19,8 @@ exec-once=swaybg -c "#000000"
 source=~/.config/hypr/macchiato.conf
 
 monitor=,1920x1200,auto,1
-# exec-once = waybar
+#exec-once = waybar
+exec-once = ~/.config/waybar/launch.sh
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
